index.css
h1{
  text-align: center;
}
p{
  text-align: center;
}

.kawaii{
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 90%;
  max-height: 90%
}

body{
  background-image: url(01.png);
  background-size: cover;
  background-attachment: fixed;
}

.jumbotron{
  margin-top: 5%;
  margin-bottom: 5%;
  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

